core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select_aggregate__single_measurement__integral.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT INTEGRAL(f64_field) FROM data\")"
---
Sort: time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), integral:Float64;N]
  Projection: Dictionary(Int32, Utf8("data")) AS iox::measurement, TimestampNanosecond(0, None) AS time, sum(integral(data.f64_field)) AS integral [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), integral:Float64;N]
    Filter: __aggr_count > Int64(0) [sum(integral(data.f64_field)):Float64;N, __aggr_count:Int64]
      Aggregate: groupBy=[[]], aggr=[[sum(integral(data.f64_field)), count(Int64(1)) AS __aggr_count]] [sum(integral(data.f64_field)):Float64;N, __aggr_count:Int64]
        WindowAggr: windowExpr=[[integral_window(data.f64_field, IntervalMonthDayNano("IntervalMonthDayNano { months: 0, days: 0, nanoseconds: 1000000000 }"), data.time, DurationNanosecond("0"), DurationNanosecond("0")) ORDER BY [data.time ASC NULLS LAST] ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING AS integral(data.f64_field)]] [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N, integral(data.f64_field):Float64;N]
          Filter: data.f64_field IS NOT NULL [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
            TableScan: data [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
